# stock-portfolio-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  a2as.yaml  main.py  package-lock.json  production-readiness.patch  pyproject.toml
.kiro/specs/docker-support/: design.md  requirements.md  tasks.md
agent/: __init__.py  agent_config.py  api.py  errors.py  insights.py  models.py  portfolio.py  prompts.py  session.py  tools.py
agent/cli/: __init__.py  app.py  client.py  widgets.py
tests/: __init__.py  test_cli_integration.py  test_integration.py  test_portfolio.py  test_tools.py
