[project]
name = "stock-portfolio-analysis-agent"
version = "0.1.0"
description = "Stock Portfolio Analysis Agent using Composio Tool Router"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "composio>=0.10.0",
    "composio-openai-agents>=0.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "textual>=0.47.0",
    "rich>=13.7.0",
]

[project.scripts]
portfolio-cli = "agent.cli.app:run_cli"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
